--- a/extensions/datastores/accumulo/pom.xml
+++ b/extensions/datastores/accumulo/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
         <dependency>
             <groupId>mil.nga.giat</groupId>
+            <artifactId>geowave-core-mapreduce</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mil.nga.giat</groupId>
             <artifactId>geowave-core-cli</artifactId>
             <version>${project.version}</version>
         </dependency>
