--- a/analytics/api/pom.xml
+++ b/analytics/api/pom.xml
@@ -12,7 +12,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>mil.nga.giat</groupId>
-			<artifactId>geowave-datastore-accumulo</artifactId>
+			<artifactId>geowave-core-mapreduce</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
