--- a/core/mapreduce/pom.xml
+++ b/core/mapreduce/pom.xml
@@ -12,7 +12,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>mil.nga.giat</groupId>
-			<artifactId>geowave-core-store</artifactId>
+			<artifactId>geowave-core-cli</artifactId>
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
