--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -12,6 +12,7 @@
 	<description>The set of extended capabilities supported for GeoWave</description>	
 	<packaging>pom</packaging>
 	<modules>
+	    <module>cli/stats</module>
 		<module>adapters/raster</module>
 		<module>adapters/vector</module>
 		<module>datastores/accumulo</module>
