--- a/extensions/formats/stanag4676/service/pom.xml
+++ b/extensions/formats/stanag4676/service/pom.xml
@@ -26,6 +26,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>mil.nga.giat</groupId>
+			<artifactId>geowave-service-webapp</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
