--- a/extensions/formats/stanag4676/service/pom.xml
+++ b/extensions/formats/stanag4676/service/pom.xml
@@ -15,20 +15,19 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>mil.nga.giat</groupId>
+			<artifactId>geowave-service-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
-			<version>2.10</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>mil.nga.giat</groupId>
-			<artifactId>geowave-service-webapp</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
