--- a/analytics/spark/pom.xml
+++ b/analytics/spark/pom.xml
@@ -13,7 +13,12 @@
 		<scala.version>2.10.4</scala.version>
 	</properties>
 	<dependencies>
-	     <dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.esotericsoftware.kryo</groupId>
 			<artifactId>kryo</artifactId>
 			<version>2.21</version>
@@ -58,6 +63,10 @@
 					<groupId>javax.servlet</groupId>
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -84,6 +93,11 @@
 
 				<exclusion>
 					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
 			</exclusions>
@@ -122,7 +136,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.2.1</version>
+			<version>1.5.1</version>
 		</dependency>
 	</dependencies>
 	<repositories>
@@ -151,7 +165,7 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
