--- a/test/pom.xml
+++ b/test/pom.xml
@@ -121,6 +121,11 @@
 			<version>3.1.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-core</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
