--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -16,6 +16,7 @@
 		<module>datastores/accumulo</module>
 		<module>datastores/hbase</module>
 		<module>datastores/bigtable</module>
+		<module>datastores/dynamodb</module>
 		<module>formats/geolife</module>
 		<module>formats/geotools-raster</module>
 		<module>formats/geotools-vector</module>
