--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,8 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>14.0-rc1</version>
+				<!-- <version>14.0-rc1</version>  -->
+				<version>16.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
