--- a/test/pom.xml
+++ b/test/pom.xml
@@ -116,12 +116,6 @@
 			<version>1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cassandraunit</groupId>
-			<artifactId>cassandra-unit</artifactId>
-			<version>3.1.1.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-core</artifactId>
 			<version>3.1.2</version>
@@ -365,6 +359,20 @@
 						<sourceDirectory>../test/src/main/java</sourceDirectory>
 					</sourceDirectories>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cassandra-maven-plugin</artifactId>
+				<version>3.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>start</goal>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+
 			</plugin>
 		</plugins>
 	</build>
