--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<tag>HEAD</tag>
 	</scm>
 	<properties>
+		<guava.version>14.0-rc1</guava.version>
 		<geotools.version>16.0</geotools.version>
 		<hadoop.env.classifier>hadoop2</hadoop.env.classifier>
 		<geoserver.version>2.10.0</geoserver.version>
@@ -152,8 +153,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<!-- <version>14.0-rc1</version>  -->
-				<version>16.0.1</version>
+				<version>${guava.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
