--- a/test/pom.xml
+++ b/test/pom.xml
@@ -376,4 +376,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>cassandra</id>
+			<properties>
+				<guava.version>16.0.1</guava.version>
+				<testStoreType>CASSANDRA</testStoreType>
+			</properties>
+		</profile>
+	</profiles>
 </project>
