--- a/extensions/adapters/vector/pom.xml
+++ b/extensions/adapters/vector/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>geowave-extension-parent</artifactId>
@@ -57,13 +58,6 @@
 		<dependency>
 			<groupId>com.aol.simplereact</groupId>
 			<artifactId>cyclops-react</artifactId>
-			<version>1.0.0-RC4</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>jcl-over-slf4j</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.geotools</groupId>
@@ -102,10 +96,10 @@
 	</dependencies>
 	<build>
 		<plugins>
-      		<plugin>
-        		<groupId>org.apache.avro</groupId>
-        		<artifactId>avro-maven-plugin</artifactId>
-      		</plugin>
-    	</plugins>
+			<plugin>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 </project>
