--- a/extensions/datastores/cassandra/pom.xml
+++ b/extensions/datastores/cassandra/pom.xml
@@ -32,5 +32,14 @@
 			<artifactId>cassandra-driver-core</artifactId>
 			<version>3.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aol.simplereact</groupId>
+			<artifactId>cyclops-react</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.spotify</groupId>
+			<artifactId>futures-extra</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
