Initial commit of cassandra IT

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -14,9 +14,10 @@
 		<module>adapters/raster</module>
 		<module>adapters/vector</module>
 		<module>datastores/accumulo</module>
-		<module>datastores/hbase</module>
 		<module>datastores/bigtable</module>
+		<module>datastores/cassandra</module>
 		<module>datastores/dynamodb</module>
+		<module>datastores/hbase</module>
 		<module>formats/geolife</module>
 		<module>formats/geotools-raster</module>
 		<module>formats/geotools-vector</module>
