--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
 		<jacoco.version>0.7.4.201502262128</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<test.args>-XX:CompressedClassSpaceSize=256m -XX:+UseSerialGC -Xms1g -Xmx2g -XX:MaxMetaspaceSize=256m</test.args>
+		<test.args>-XX:CompressedClassSpaceSize=256m -XX:+UseSerialGC -Xms1g
+			-Xmx2g -XX:MaxMetaspaceSize=256m</test.args>
 		<findbugs.version>3.0.1</findbugs.version>
 		<findbugs.omitVisitors>MutableStaticFields,FindReturnRef</findbugs.omitVisitors>
 		<findbugs.effort>Max</findbugs.effort>
@@ -223,6 +224,24 @@
 				<groupId>com.google.cloud.bigtable</groupId>
 				<artifactId>bigtable-hbase-1.2</artifactId>
 				<version>${bigtable.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>2.6.6</version>
+			</dependency>			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>2.6.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-cbor</artifactId>
+				<version>2.6.6</version>
+			</dependency>			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.6.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.hbase</groupId>
@@ -812,12 +831,9 @@
 				that has push access (credentials are setup and correct). Make sure you have 
 				the branch active in git you want to tag. If something goes wrong pushing, 
 				you will most likely have outstanding commits in your local repo you will 
-				have to revert/remove. 
-				1. mvn release:prepare -DdryRun=true -Darguments="-DskipTests 
-				-Dfindbugs.skip" 
-				2. Inspect and ensure the correct pom.xml files will be 
-				modified 
-				3. mvn release:prepare -Darguments="-DskipTests -Dfindbugs.skip" 
+				have to revert/remove. 1. mvn release:prepare -DdryRun=true -Darguments="-DskipTests 
+				-Dfindbugs.skip" 2. Inspect and ensure the correct pom.xml files will be 
+				modified 3. mvn release:prepare -Darguments="-DskipTests -Dfindbugs.skip" 
 				4. mvn release:clean -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
