testing-students-code

--- a/services/rest/pom.xml
+++ b/services/rest/pom.xml
@@ -48,10 +48,10 @@
 			<artifactId>org.restlet</artifactId>
 			<version>${restlet-version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet.ext.jackson</artifactId>
 			<version>${restlet-version}</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 </project>
