--- a/core/store/pom.xml
+++ b/core/store/pom.xml
@@ -31,6 +31,12 @@
 			<version>2.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.restlet.jse</groupId>
+			<artifactId>org.restlet</artifactId>
+			<version>2.3.9</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 </project>
