--- a/extensions/adapters/raster/pom.xml
+++ b/extensions/adapters/raster/pom.xml
@@ -93,5 +93,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.restlet.jse</groupId>
+			<artifactId>org.restlet</artifactId>
+			<version>2.3.9</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
