--- a/extensions/cli/geoserver/pom.xml
+++ b/extensions/cli/geoserver/pom.xml
@@ -44,5 +44,11 @@
 			<artifactId>geowave-adapter-vector</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.restlet.jse</groupId>
+			<artifactId>org.restlet</artifactId>
+			<version>2.3.9</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
