--- a/services/rest/pom.xml
+++ b/services/rest/pom.xml
@@ -10,22 +10,11 @@
 	<artifactId>geowave-service-rest</artifactId>
 	<name>GeoWave Services Rest</name>
 	<repositories>
-		<!-- <repository>
+		<repository>
 			<id>maven-restlet</id>
 			<name>Restlet repository</name>
 			<url>https://maven.restlet.com</url>
-		</repository> -->
-		<repository>
-   <id>boundless</id>
-   <name>Boundless Maven Repository</name>
-   <url>https://repo.boundlessgeo.com/main/</url>
-   <snapshots>
-     <enabled>true</enabled>
-   </snapshots>
-   <releases>
-     <enabled>true</enabled>
-   </releases>
-  </repository>
+		</repository>
 	</repositories>
 	<properties>
 		<restlet-version>2.3.9</restlet-version>
@@ -58,11 +47,13 @@
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet</artifactId>
 			<version>${restlet-version}</version>
+			<optional>true</optional>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet.ext.jackson</artifactId>
 			<version>${restlet-version}</version>
-		</dependency> -->
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
