--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -102,6 +102,11 @@
 				</dependency>
 				<dependency>
 					<groupId>mil.nga.giat</groupId>
+					<artifactId>geowave-cli-debug</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>mil.nga.giat</groupId>
 					<artifactId>geowave-cli-osm</artifactId>
 					<version>${project.version}</version>
 				</dependency>
